--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,13 @@ body {
     height: 200px;
 }
 
+ .container
+            {
+            max-width:800px;
+            margin: 0 auto;
+            font-family:sans-serif;
+            padding-left: 20px;
+            padding-right: 20px;
+            background-color: royalblue;
+            color: powderblue;
+}
